# elte-ik-bsc-thesis

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  TODO  clean.bat  elte-ik-bsc-thesis.sln  errorcodes.txt  sources.txt
Binary/: README.md
CODE/: TrafficModeller.cpp
DoxyGen/: DoxyFile  README.md
LATEX/: elteikthesis.cls  settings.tex  thesis.tex
LATEX/chapters/: impl.tex  intro.tex  sum.tex  user.tex
TrafficSimulator/: BUGS.txt  README.md  TODO.txt  TrafficSimulator.aps  TrafficSimulator.cpp  TrafficSimulator.rc  TrafficSimulator.vcxproj  TrafficSimulator.vcxproj.filters  config.csv  imgui.ini  resource.h
TrafficSimulator/3Dobjects/: 3d_object_library.csv  3d_object_library.xlsx
TrafficSimulator/Control/: ConfigLoader.cpp  ConfigLoader.h  ConfigSaver.cpp  ConfigSaver.h  Logger.cpp  Logger.h  MapLoader.cpp  MapLoader.h  MapSaver.cpp  MapSaver.h  object3DLoader.cpp  object3DLoader.h  objectStorage.cpp  objectStorage.h
TrafficSimulator/Model/: Dijkstra.cpp  Dijkstra.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Point.cpp  Point.h  RayPicking.cpp  Vehicle.cpp  Vehicle.h  reverseMap.cpp  reverseMap.h
TrafficSimulator/Saves/: 01_SMALL_TOWN.csv  03_CIRCLE_CITY.csv  04_SEPARATED_TOWNS.csv  05_SQUARE_CITY.csv  2road.csv  A.csv  AAA11111.csv  AAA222.csv  AAAAAAAAAA.csv  ABC.csv  BONYOLULT_2.csv  BigCity_2.csv  BigCity_3.csv  CircleTest.csv  ConnectionTester.csv  FIVE2.csv  FIVE_B.csv  FIVE_C.csv  FIVE_D.csv  Illegal config.csv  IllegalState_2.csv  RoadTester_02.csv  TEST_BIG_CITY_ROADS.csv  TEST_MULTIPLE_WAYS.csv  TEST_STAR.csv  TEST_TRAFFIC_JAM_1.csv  TEST_TRAFFIC_JAM_2.csv  TORLODAS.csv  VehicleTest.csv  paralelTesting.csv  paralelTesting2.csv  roadTest.csv  save.csv  save117777.csv  save2.csv  save2222.csv  save33333.csv  save77.csv  savedddd.csv  testSave.csv  (+5 more)
TrafficSimulator/View/: Animator.cpp  Animator.h  Camera.cpp  Camera.h  EventListener.cpp  EventListener.h  GUI.cpp  GUI.h  GUIWindows.cpp  RayPicking.cpp  Render.cpp  Render.h  WorkWindow.cpp  WorkWindow.h  fpsCounter.cpp  fpsCounter.h  object3D.cpp  object3D.h  object3Dvehicle.h
TrafficSimulator/View/Objects/: Object3D.cpp  Object3D.h  Object3Droad.cpp  Object3Droad.h  Object3Dvehicle.cpp  Object3Dvehicle.h  ObjectStorage.cpp  ObjectStorage.h
TrafficSimulator/View/Shaders/: fragmentShader.frag  vertexShader.vert
TrafficSimulator/View/Utilities/: ObjParser_OGL3.cpp  ObjParser_OGL3.h  ProgramObject.cpp  ProgramObject.h  TextureObject.h  TextureObject.inl
TrafficSimulatorTest/: CameraTest.cpp  README.md  TrafficSimulatorTest.cpp  TrafficSimulatorTest.vcxproj  TrafficSimulatorTest.vcxproj.filters
code/: CMakeLists.txt  READEME.md  TrafficModeller.h  settings.h
dependencies/: README.md
dependencies/OGLPack/include/imgui/: imgui_demo.cpp
thesis/: Háromdimenziós Közlekedés Szimuláció.docx  README.MD  README.md  SandorBalazsBSCThesis.cls  SandorBalazsBSCThesis.tex  ~$romdimenziós Közlekedés Szimuláció.docx  ~WRL0005.tmp  ~WRL0280.tmp  ~WRL1336.tmp
thesis/chapters/: Implementation.tex  Introduction.tex  Summary.tex  UserGuide.tex
